# cnbitkextra

./: .gitignore  Makefile.am  configure.ac
debian/: changelog  control  libcnbiprotocol-dev.install  libcnbiprotocol.install  libcnbismr-dev.install  libcnbismr.install  libfeslanguage-dev.install  libfeslanguage.install  librexlanguage-dev.install  librexlanguage-dev.manpages  librexlanguage.install
doc/: .gitignore  Makefile.am
doc/examples/cnbiprotocol/: Makefile.am  cpaudio.cpp  cpdynamicp2.cpp  cpplayer.cpp  cpprobability.cpp  cptrack.cpp  cptrials.cpp  cptriggerbeep.cpp  cptriggerfactory.cpp  cptriggerlpt.cpp
doc/examples/cnbismr/: Makefile.am  csmrbars.cpp  csmrcbars.cpp  csmrevents.cpp
doc/examples/feslanguage/: Makefile.am  channelsloop.c  fldecode.c  flencode.c  jointcontroller.c  jointreader.c
extra/cnbiprotocol/: cpdynamicp2_errp.m  cpdynamicp2_errp.ora  pylpttrigger_README.txt  python_client.py
extra/cnbiprotocols/: Makefile.am  mi_protocol_template.xml  ndf_mi_include.m
extra/cnbiprotocols/errpm/: cnbitkconfig_errpm.xml
m4/: funcarg.m4
src/cnbiprotocol/: CpAudio.cpp  CpAudio.hpp  CpDynamicP2.cpp  CpDynamicP2.hpp  CpPlayer.cpp  CpPlayer.hpp  CpProbability.cpp  CpProbability.hpp  CpRandInt.cpp  CpRandInt.hpp  CpSound.cpp  CpSound.hpp  CpTrack.cpp  CpTrack.hpp  CpTrials.cpp  CpTrials.hpp  CpTrigger.cpp  CpTrigger.hpp  CpTriggerBeep.cpp  CpTriggerBeep.hpp  CpTriggerFactory.cpp  CpTriggerFactory.hpp  CpTriggerLPT.cpp  CpTriggerLPT.hpp  CpTriggerSerial.cpp  CpTriggerSerial.hpp  Makefile.am  cp_triggersend.cpp  cp_utilities.hpp
src/cnbiprotocols/: cnbiprotocols.pc.in
src/cnbiprotocols/cp/: Makefile.am  cp_launcher  cp_matlab
src/cnbiprotocols/errp/: ErrpSquares.cpp  ErrpSquares.hpp  Makefile.am  errp_offline.cpp  errp_online  errp_utilities.hpp  errpm_offline.cpp  errpm_online  errpm_squares.cpp  errpm_squares.hpp  errpm_utilities.hpp
src/cnbiprotocols/lc/: Makefile.am  lc_eventcheck.cpp  lc_triggercheck.cpp
src/cnbiprotocols/mi/: Makefile.am  artifact_utilities.hpp  mi_control.cpp  mi_offline.cpp  mi_offline_fes.cpp  mi_online.cpp  mi_online_fes.cpp  mi_online_original.cpp  mi_tactile_online.cpp  mi_utilities.hpp  serial_kiuk.h  tactile_utilities.hpp
src/cnbismr/: CSmrBars.cpp  CSmrBars.hpp  CSmrCBars.cpp  CSmrCBars.hpp  CSmrCopilot.cpp  CSmrCopilot.hpp  CSmrEngine.cpp  CSmrEngine.hpp  CSmrEngineExt.cpp  CSmrEngineExt.hpp  CSmrEvents.cpp  CSmrEvents.hpp  CSmrTrigger.cpp  CSmrTrigger.hpp  Makefile.am  cnbismr.pc.in  csmr_simclassifier.cpp  csmr_triggercheck.cpp  generator.c  generator.h  stimula.c  stimula.h
src/feslanguage/: Makefile.am  fesbytestream.c  fesbytestream.h  fesdecode.c  fesdecode.h  fesencode.c  fesencode.h  feslanguage.h  feslanguage.pc.in  serialport.c  serialport.h
src/rexlanguage/: Makefile.am  rex.cpp  rex.hpp  rexlanguage.pc.in
