PACKAGE_NAME = @PACKAGE_NAME@

# Note by L.Tonin  <luca.tonin@epfl.ch> on 13/09/16 12:42:03
# Temporary, until when we move each protocols to each own repository/project
PACKAGE_SUBNAME = cnbimi

protocolmatdir = ${HOME}/.cnbitk/$(PACKAGE_SUBNAME)/ndf
protocolmat_DATA = ndf_mi.m \
		   ndf_mi_include.m

protocolxmldir = ${HOME}/.cnbitk/$(PACKAGE_SUBNAME)/xml
protocolxml_DATA = mi_protocol_template.xml
